@@ -1,11 +1,6 @@
-; @(#)$Ident: dist.ini 2013-11-27 13:57 pjf ;
+; @(#)$Ident: dist.ini 2013-12-12 22:14 pjf ;
 
-name              = HTML-FormWidgets
-abstract          = Create HTML user interface components
-author            = Peter Flanigan <pjfl@cpan.org>
-copyright_holder  = Peter Flanigan
-license           = Perl_5
-main_module       = lib/HTML/FormWidgets.pm
+name = HTML-FormWidgets
 
 [Prereqs]
 perl              = 5.01
@@ -48,15 +43,12 @@ bugtracker.mailto = bug-HTML-FormWidgets@rt.cpan.org
 ;repository.web   = http://github.com/pjfl/HTML-FormWidgets
 ;repository.type  = git
 
-[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
-filename          = README.md
-location          = root
-type              = markdown
-
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
 [GatherDir]
+[AbstractFromPOD]
+[LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
 [License]
